# gpu-slack-vllm-runner

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: aggressive-low-util.yaml  default.yaml  nhnhome-archive.yaml  tensor-parallel-2gpu.yaml
data/input/: prompts.jsonl
scripts/: bootstrap.sh  install_systemd_user.sh  uninstall_systemd_user.sh
src/gpu_slack_runner/: __init__.py  archive.py  cli.py  config.py  gpu.py  processes.py  scheduler.py  state.py
src/gpu_slack_runner/jobs/: __init__.py  vllm_generate.py
systemd/: gpu-slack-runner.service.template  gpu-slack-runner.timer.template
tests/: test_archive.py  test_config.py  test_scheduler.py  test_vllm_generate.py
