[project]
name = "gpu-slack-vllm-runner"
version = "0.1.0"
description = "Polite GPU slack filler that launches vLLM generation jobs on idle NVIDIA GPUs."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "CSDL" }
]
dependencies = [
  "nvidia-ml-py>=12.0.0",
  "psutil>=5.9.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
vllm = [
  "vllm",
]

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "types-psutil>=7.2.2.20260518",
  "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
gpu-slack = "gpu_slack_runner.cli:main"
gpu-slack-vllm-generate = "gpu_slack_runner.jobs.vllm_generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_slack_runner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
